[gd_scene load_steps=6 format=3 uid="uid://chtesvodkalij"]

[ext_resource type="Theme" uid="uid://bfmhlm5dgdsvs" path="res://sprites/UI/UI.tres" id="1_l6cm7"]
[ext_resource type="Script" uid="uid://bp5qa5sc4xlkr" path="res://scripts/main_menu.gd" id="2_ekxnf"]
[ext_resource type="FontFile" uid="uid://cmowptq4b1wr" path="res://sprites/UI/celtic-bitty.ttf" id="3_bqqt6"]
[ext_resource type="AudioStream" uid="uid://coaw75bax1mx6" path="res://audio/sfx/Games, Video, Medieval, GUI, Select, Sword Maker SND63099.wav" id="3_wu84c"]
[ext_resource type="FontFile" uid="uid://cte8qogeshirg" path="res://sprites/UI/celtic-bit.ttf" id="5_8ln24"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 320.0
offset_bottom = 180.0
theme = ExtResource("1_l6cm7")
script = ExtResource("2_ekxnf")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 16
text = "Swinghammer"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(320, 130)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButtons" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(320, 87)
layout_mode = 2
theme_override_constants/separation = 4

[node name="StartButton" type="Button" parent="CenterContainer/MenuButtons" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_l6cm7")
text = "Start"
flat = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="CenterContainer/MenuButtons/StartButton"]
stream = ExtResource("3_wu84c")

[node name="OptionsButton" type="Button" parent="CenterContainer/MenuButtons" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_l6cm7")
text = "Options
"
flat = true

[node name="CreditsButton" type="Button" parent="CenterContainer/MenuButtons" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_l6cm7")
text = "Credits
"
flat = true

[node name="QuitButton" type="Button" parent="CenterContainer/MenuButtons" groups=["button"]]
layout_mode = 2
theme = ExtResource("1_l6cm7")
text = "Quit"
flat = true

[node name="OptionsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(320, 130)
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/OptionsMenu"]
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="CatagoryMenu" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer"]
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
alignment = 1

[node name="DisplayButton" type="Button" parent="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu" groups=["button"]]
layout_mode = 2
text = "Display"

[node name="SoundButton" type="Button" parent="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu" groups=["button"]]
layout_mode = 2
text = "Sound
"

[node name="AccessButton" type="Button" parent="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu" groups=["button"]]
layout_mode = 2
text = "Accessability"

[node name="DisplayMenu" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2

[node name="DisplayMode" type="CheckBox" parent="CenterContainer/OptionsMenu/HBoxContainer/DisplayMenu" groups=["button"]]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/DisplayMenu/DisplayMode"]
layout_mode = 2
offset_left = 25.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 17.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
text = "Fullscreen"

[node name="AccessabilityMenu" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 0

[node name="FlipHammer" type="CheckBox" parent="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu" groups=["button"]]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu/FlipHammer"]
layout_mode = 2
offset_left = 25.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 17.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
text = "Flip Hammer"

[node name="Flicker" type="CheckBox" parent="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu" groups=["button"]]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu/Flicker"]
layout_mode = 2
offset_left = 25.0
offset_top = 15.0
offset_right = 145.0
offset_bottom = 17.0
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
text = "Flicker"

[node name="VolumeMenu" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(120, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MainVolumeLabel" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_bqqt6")
text = "Master"
vertical_alignment = 2

[node name="MainVolumeSlider" type="HSlider" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer2" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="MusicVolumeLabel" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer2"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_bqqt6")
text = "Music"
vertical_alignment = 2

[node name="MusicVolumeSlider" type="HSlider" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="HBoxContainer3" type="VBoxContainer" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="SFXVolumeLabel" type="Label" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer3"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("3_bqqt6")
text = "SFX"
vertical_alignment = 2

[node name="SFXVolumeSlider" type="HSlider" parent="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer3"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 0

[node name="BackButton" type="Button" parent="CenterContainer/OptionsMenu" groups=["button"]]
layout_mode = 2
text = "Back"

[node name="CreditsMenu" type="VBoxContainer" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 6

[node name="Credits" type="Label" parent="CenterContainer/CreditsMenu"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_8ln24")
text = "Developed by Ben Bevan
Godot 4.4 - Aesprite - Soundly
Background by Craftpix"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpecialThanks" type="Label" parent="CenterContainer/CreditsMenu"]
visible = false
custom_minimum_size = Vector2(320, 50)
layout_mode = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_8ln24")
text = "Special Thanks!
Mergery Wanjiru - Design + Testing
Owen Bevan - Food + Shelter"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Next" type="Button" parent="CenterContainer/CreditsMenu" groups=["button"]]
layout_mode = 2
text = "Next"

[node name="BackButton" type="Button" parent="CenterContainer/CreditsMenu" groups=["button"]]
layout_mode = 2
text = "Back"

[node name="VersionLogScreen" type="VBoxContainer" parent="CenterContainer"]
visible = false
custom_minimum_size = Vector2(0, 62)
layout_mode = 2
theme_override_constants/separation = 6

[node name="VersionLog" type="Label" parent="CenterContainer/VersionLogScreen"]
custom_minimum_size = Vector2(320, 73)
layout_mode = 2
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("5_8ln24")
text = "Known issues:
- Gaps between partially forged tiles
- Cannot sharpen fully forged tiles, suspected to be, as the tile colliders are smaller than bar collider. Will need to rework forge code to work for indevidual tiles as treating it as a bar with it's own collider is unnecassary and problamatic.
- Barrel transparency may be still too opaque. Could take inspiration from potioncraft pestle and mortar.
- Hole punch non-functional. Will be hard to implement with current steel logic. Fix steel forging logic before adding hole punch.

Version 0.5.0 - Insurance Added, Expand Ratio Tweaks and Bug Fixes:
- Added insurance that is deducted from wallet at the end of the day.
- Insurance is displayed on daily summary.
- Upgrading the workshop decreases insurance for the next day.
- Fixed view expanding past the workshop when stretching window when UI panel is open.
- Daily net fixes including text colour and resetting on new day
- UI code restructure


Version 0.4.2 - Expand Aspect Ratio Support:
- Aspect ratio now set to expand and camera system has been reworked to work with expand

Version 0.4.1 - Bug Fix:
- Contact monitoring was mistakenly set to 0 when it should have been at least 1. This resulted in the hammer not forging as the collisions were not processed."
autowrap_mode = 3

[node name="BackButton" type="Button" parent="CenterContainer/VersionLogScreen" groups=["button"]]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/MenuButtons/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="CenterContainer/MenuButtons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu/DisplayButton" to="." method="_on_display_button_pressed"]
[connection signal="pressed" from="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="pressed" from="CenterContainer/OptionsMenu/HBoxContainer/CatagoryMenu/AccessButton" to="." method="_on_access_button_pressed"]
[connection signal="toggled" from="CenterContainer/OptionsMenu/HBoxContainer/DisplayMenu/DisplayMode" to="." method="_on_display_mode_toggled"]
[connection signal="toggled" from="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu/FlipHammer" to="." method="_on_flip_hammer_toggled"]
[connection signal="toggled" from="CenterContainer/OptionsMenu/HBoxContainer/AccessabilityMenu/Flicker" to="." method="_on_flicker_toggled"]
[connection signal="value_changed" from="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer/MainVolumeSlider" to="." method="_on_main_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer2/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="CenterContainer/OptionsMenu/HBoxContainer/VolumeMenu/HBoxContainer3/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="CenterContainer/OptionsMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="CenterContainer/CreditsMenu/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/VersionLogScreen/BackButton" to="." method="_on_back_button_pressed"]
